Project verzel_rotating_parking {
  database_type: 'PostgreSQL'
  Note: '''
    Modelo relacional do desafio Estacionamento Rotativo.
    Datas e horas sao armazenadas em UTC e exibidas no fuso da aplicacao.
  '''
}

Enum reservation_status {
  WAITLISTED
  ACTIVE
  CANCELLED
  LEFT_WAITLIST
}

Enum user_role {
  USER
  ADMIN
}

Enum waitlist_status {
  WAITING
  PROMOTED
  LEFT
}

Enum reservation_event_type {
  RESERVATION_CREATED
  RESERVATION_CANCELLED
  WAITLIST_JOINED
  WAITLIST_LEFT
  WAITLIST_PROMOTED
}

Table users {
  id uuid [pk, not null]
  name varchar(120) [not null]
  email varchar(320) [not null, unique, note: 'Persistido em letras minusculas depois de trim.']
  password_hash varchar(255) [not null, note: 'Somente o hash seguro da senha. Nunca armazenar a senha em texto puro.']
  role user_role [not null, default: 'USER']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
    USER acessa somente as proprias reservas, filas e historicos.
    ADMIN administra setores e acessa ranking, reservas e historicos de todos os usuarios.
    O primeiro ADMIN e criado pelo seed usando credenciais fornecidas por variaveis de ambiente.
  '''
}

Table sectors {
  id uuid [pk, not null]
  name varchar(120) [not null]
  location varchar(255) [not null]
  capacity integer [not null, note: 'Quantidade total de vagas reservaveis. Deve ser maior ou igual a 1.']
  available_spots integer [not null, note: 'Cota atual. Deve permanecer entre 0 e capacity.']
  hourly_rate numeric(10,2) [not null, note: 'Tarifa por hora. Nao pode ser negativa.']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  checks {
    `capacity >= 1` [name: 'sectors_capacity_positive']
    `available_spots >= 0 AND available_spots <= capacity` [name: 'sectors_available_spots_range']
    `hourly_rate >= 0` [name: 'sectors_hourly_rate_non_negative']
  }

  indexes {
    name [name: 'sectors_name_idx']
  }
}

Table reservations {
  id uuid [pk, not null]
  user_id uuid [not null]
  sector_id uuid [not null]
  plate varchar(10) [not null, note: 'Placa normalizada em letras maiusculas e sem pontuacao.']
  expected_arrival_at timestamptz [not null]
  status reservation_status [not null]
  activated_at timestamptz [note: 'Preenchido quando a vaga passa a ser uma reserva ativa. Usado no ranking.']
  cancelled_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, created_at) [name: 'reservations_user_timeline_idx']
    sector_id [name: 'reservations_sector_idx']
    plate [name: 'reservations_plate_idx']
    (sector_id, activated_at) [name: 'reservations_ranking_idx']
  }

  Note: '''
    Representa uma solicitacao durante todo o seu ciclo, inclusive enquanto aguarda na fila.
    A migration PostgreSQL deve criar um indice unico parcial em plate para status ACTIVE,
    garantindo no banco no maximo uma reserva ativa por placa. Tambem deve criar um indice
    unico parcial em (sector_id, plate) para status WAITLISTED, impedindo entrada duplicada
    da mesma placa na fila de um setor.
  '''
}

Table waitlist_entries {
  id uuid [pk, not null]
  reservation_id uuid [not null, unique]
  sector_id uuid [not null]
  status waitlist_status [not null, default: 'WAITING']
  joined_at timestamptz [not null, default: `now()`]
  promoted_at timestamptz
  left_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (sector_id, status, joined_at, id) [name: 'waitlist_fifo_idx', note: 'Define a busca FIFO; id desempata entradas no mesmo instante.']
  }

  Note: '''
    A cota do setor nao muda ao entrar ou sair da fila.
  '''
}

Table reservation_events {
  id uuid [pk, not null]
  reservation_id uuid [not null]
  actor_user_id uuid [note: 'Usuario ou administrador que causou o evento. Nulo para promocoes automaticas.']
  type reservation_event_type [not null]
  occurred_at timestamptz [not null, default: `now()`]
  triggered_by_reservation_id uuid [note: 'No evento WAITLIST_PROMOTED, identifica a reserva cujo cancelamento originou a promocao.']
  details jsonb [note: 'Dados auxiliares do evento. Nao deve substituir colunas relacionais usadas nas regras.']

  indexes {
    (reservation_id, occurred_at, id) [name: 'reservation_events_timeline_idx']
  }

  Note: 'Registro imutavel e ordenado do ciclo da reserva.'
}

Ref: reservations.sector_id > sectors.id [delete: restrict, update: cascade]
Ref: reservations.user_id > users.id [delete: restrict, update: cascade]
Ref: waitlist_entries.reservation_id - reservations.id [delete: cascade, update: cascade]
Ref: waitlist_entries.sector_id > sectors.id [delete: restrict, update: cascade]
Ref: reservation_events.reservation_id > reservations.id [delete: cascade, update: cascade]
Ref: reservation_events.actor_user_id > users.id [delete: set null, update: cascade]
Ref: reservation_events.triggered_by_reservation_id > reservations.id [delete: set null, update: cascade]
